--- a/data/freeseer.desktop
+++ b/data/freeseer.desktop
@@ -1,10 +1,8 @@
 [Desktop Entry]
-Encoding=UTF-8
 Name=freeseer
 Comment=Video capture utility
 GenericName=
 Type=Application
 Exec=/usr/bin/freeseer-record
-Icon=48x48-freeseer.png
+Icon=48x48-freeseer
 Categories=AudioVideo;Recorder;
-
